; ModuleID = '/home/carl/AnghaBench/openssl/test/extr_recordlentest.c_setup_tests.c'
source_filename = "/home/carl/AnghaBench/openssl/test/extr_recordlentest.c_setup_tests.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@cert = common dso_local global i32 0, align 4
@privkey = common dso_local global i32 0, align 4
@test_record_overflow = common dso_local global i32 0, align 4
@TOTAL_RECORD_OVERFLOW_TESTS = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @setup_tests() #0 {
  %1 = alloca i32, align 4
  %2 = call i32 @test_get_argument(i32 0)
  store i32 %2, i32* @cert, align 4
  %3 = call i32 @TEST_ptr(i32 %2)
  %4 = icmp ne i32 %3, 0
  br i1 %4, label %5, label %9

5:                                                ; preds = %0
  %6 = call i32 @test_get_argument(i32 1)
  store i32 %6, i32* @privkey, align 4
  %7 = call i32 @TEST_ptr(i32 %6)
  %8 = icmp ne i32 %7, 0
  br i1 %8, label %10, label %9

9:                                                ; preds = %5, %0
  store i32 0, i32* %1, align 4
  br label %14

10:                                               ; preds = %5
  %11 = load i32, i32* @test_record_overflow, align 4
  %12 = load i32, i32* @TOTAL_RECORD_OVERFLOW_TESTS, align 4
  %13 = call i32 @ADD_ALL_TESTS(i32 %11, i32 %12)
  store i32 1, i32* %1, align 4
  br label %14

14:                                               ; preds = %10, %9
  %15 = load i32, i32* %1, align 4
  ret i32 %15
}

declare dso_local i32 @TEST_ptr(i32) #1

declare dso_local i32 @test_get_argument(i32) #1

declare dso_local i32 @ADD_ALL_TESTS(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
